--- a/server/views/pages/view.pug
+++ b/server/views/pages/view.pug
@@ -12,6 +12,8 @@ block rootNavRight
   loading-spinner
   .nav-item
     if rights.write && pageData.meta.path !== 'home'
+      a.button.is-outlined.is-icon-only(@click='$store.dispatch("modalDeletePage/open")')
+        i.nc-icon-outline.ui-1_trash
       a.button.is-outlined(v-on:click='$store.dispatch("modalMovePage/open")')
         i.nc-icon-outline.arrows-1_shuffle-98
         span= t('nav.move')
@@ -83,4 +85,5 @@ block content
 
   modal-create-page(basepath=pageData.meta.path)
   modal-move-page(current-path=pageData.meta.path)
+  modal-delete-page(current-path=pageData.meta.path)
   anchor
