feat: telemetry client module

--- a/server/views/configure/index.pug
+++ b/server/views/configure/index.pug
@@ -29,7 +29,7 @@ block body
                   section
                     p.control.is-fullwidth
                       input#ipt-telemetry(type='checkbox', v-model='conf.telemetry', name='ipt-telemetry')
-                      label.label(for='ipt-telemetry') Enable telemetry
+                      label.label(for='ipt-telemetry') Allow Telemetry
                       span.desc Help Wiki.js developers improve this app with anonymized #[a(href='https://wiki.requarks.io/docs/telemetry') telemetry].
                     p.control.is-fullwidth
                       input#ipt-upgrade(type='checkbox', v-model='conf.upgrade', name='ipt-upgrade')
